# openai-sdk-agent-python

01_uv/: README.md
02_openrouter/: README.md
03_openai-agent/: pyproject.toml
04_hello_chainlit/: pyproject.toml
05_ai_chainlit_bot/: .env  hello.py  main.py  pyproject.toml
exam_preparation/myagent/: .env  main.py  pyproject.toml  streaming.py
prtc-sdk/: main.py  pyproject.toml
quiz-preparation/: .env  01main.py  02gloab.py  03localcontext.py  04Streaming.py  05streampc.py  07handsoff.py  08AdvanceTool.py  10sessionmemory.py  app.py  chainlit.py  main.py  output.html  pyproject.toml  runtime.py  steamlit.py  tools.py
